# walletconnect-rs

./: Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: app.rs  main.rs
foreign_rkyv/: Cargo.toml
foreign_rkyv/src/: lib.rs
lib/: Cargo.toml  old_event.rs
lib/src/: crypto.rs  error.rs  events.rs  expirations.rs  lib.rs  pairing.rs  relayer.rs  types.rs
lib/src/crypto/: keychain.rs
lib/src/pairing/: types.rs  uri.rs
rpc/: Cargo.toml
rpc/src/: api.rs  auth.rs  error.rs  lib.rs  types.rs
rpc/src/api/: core.rs  relay.rs  sign.rs
rpc/src/api/core/: pairing.rs  relay.rs
rpc/src/types/: common.rs  pairing.rs  pretty_request  relay.rs  sign.rs
walletconnect/: Cargo.toml
