[workspace]
members = [ "cli", "rpc",
  "walletconnect"
]

exclude = [ ]

resolver = "2"

[workspace.dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
walletconnect-rpc = { path = "./rpc" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"

