[workspace]
members = [ "cli", "foreign_rkyv", "lib", "rpc",
  "walletconnect"
]

exclude = [ ]

resolver = "2"

[workspace.dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"] }
walletconnect-rpc = { path = "./rpc" }
walletconnect-lib = { path = "./lib" }
tokio = { version = "1.40", default-featuers = false }
thiserror = "1.0.24"
anyhow = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_qs = "0.13"
hex = { version = "0.4", features = ["serde"]}
rand = "0.8"
chrono = { version = "0.4", features = ["serde"]}
derive_more = "1"
# [patch.crates-io]
# jsonrpsee = { path = "../../paritytech/workspace-jsonrpsee/insipx/custom-id/jsonrpsee" }

