[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walletconnect-rpc.workspace = true
tokio.workspace = true
argh = "0.1.12"
color-eyre = "0.6"
