[package]
name = "walletconnect-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing.workspace = true
log.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
chrono = { workspace = true, features = ["rkyv-32", "rkyv-validation"]}
derive_more.workspace = true
sha2 = "0.10"
sled = "0.34.7"
redb = "2.1"
const_format = "0.2.32"
peg = "0.8"
enum-as-inner = "0.6"
walletconnect-rpc = {path = "../rpc"}
rkyv = { version = "0.7", features = ["validation"]}
url = "2.5"
