[package]
name = "walletconnect-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
tracing = "0.1.28"
thiserror = "1.0.24"
jsonrpsee = { version = "0.22.1", features = ["ws-client", "client-core", "macros"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4"
data-encoding = "2.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"
rand = "0.8"
ctor = "0.2.7"
peg = "0.8"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"]}

