[package]
name = "walletconnect-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror = "1.0.24"
jsonrpsee = { path = "/Users/insipx/Projects/parity/workspace-jsonrpsee/insipx/custom-id/jsonrpsee", features = ["client", "macros"] }
serde = "1"
serde_json = "1"
chrono = "0.4"
data-encoding = "2.3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
bs58 = "0.5"
rand = "0.8"
ctor = "0.2.7"
peg = "0.8"

[dev-dependencies]
tracing-subscriber.workspace = true 

