[package]
name = "walletconnect-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true
tracing.workspace = true
tokio.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
rand.workspace = true 
chrono.workspace = true
jsonrpsee = { git = "https://github.com/insipx/jsonrpsee", branch = "insipx/custom-id", features = ["client", "macros"] }
data-encoding = "2.3"
bs58 = "0.5"
ctor = "0.2.7"
peg = "0.8"
enum-as-inner = "0.6"
url = { version = "2.5", features = ["serde"]}

[dev-dependencies]
tracing-subscriber.workspace = true 
anyhow.workspace = true
